More changes tracking 3.10 = mostly relatd to notifications.
Additionally fixed up util dependencies as part of move to factor out some packages with awkward dependencies.

--- a/bw-util-calendar/pom.xml
+++ b/bw-util-calendar/pom.xml
@@ -34,7 +34,10 @@
     <dependency>
       <groupId>net.fortuna.ical4j</groupId>
       <artifactId>ical4j</artifactId>
-      <version>${ical4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
     </dependency>
   </dependencies>
 </project>
