--- a/bw-util-security/pom.xml
+++ b/bw-util-security/pom.xml
@@ -21,5 +21,9 @@
       <artifactId>bw-util-jmx</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
   </dependencies>
 </project>
