--- a/bw-util-servlet-filters/pom.xml
+++ b/bw-util-servlet-filters/pom.xml
@@ -21,5 +21,10 @@
       <artifactId>bw-util-servlet</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
