--- a/bw-util-xml/pom.xml
+++ b/bw-util-xml/pom.xml
@@ -29,5 +29,10 @@
       <artifactId>bw-util-misc</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>jtidy</groupId>
+      <artifactId>jtidy</artifactId>
+    </dependency>
   </dependencies>
 </project>
