--- a/bw-util-caching/pom.xml
+++ b/bw-util-caching/pom.xml
@@ -12,4 +12,12 @@
   <version>4.0.1-SNAPSHOT</version>
 
   <packaging>jar</packaging>
+
+  <dependencies>
+    <!-- Bedework -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+    </dependency>
+  </dependencies>
 </project>
