--- a/bw-util-directory/pom.xml
+++ b/bw-util-directory/pom.xml
@@ -20,6 +20,11 @@
       <artifactId>bw-util-misc</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
