--- a/bw-util-servlet/pom.xml
+++ b/bw-util-servlet/pom.xml
@@ -30,5 +30,14 @@
       <artifactId>bw-util-jmx</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.struts</groupId>
+      <artifactId>struts-core</artifactId>
+    </dependency>
   </dependencies>
 </project>
