Preparing bw-util for sonatype.
Update pom(s). Change dependencies to use bedework fork of ical4j.
Use latest release of bw-ws

Clean up some javadoc. Longer term job to handle all issues.

--- a/bw-util-calendar/pom.xml
+++ b/bw-util-calendar/pom.xml
@@ -30,11 +30,11 @@
       <artifactId>bw-util-xml</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <!-- Third Party Libraries -->
     <dependency>
-      <groupId>net.fortuna.ical4j</groupId>
-      <artifactId>ical4j</artifactId>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-ical4j-cl</artifactId>
     </dependency>
+    <!-- Third Party Libraries -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
