--- a/bw-util-timezones/pom.xml
+++ b/bw-util-timezones/pom.xml
@@ -32,8 +32,8 @@
     </dependency>
 
     <dependency>
-      <groupId>net.fortuna.ical4j</groupId>
-      <artifactId>ical4j</artifactId>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-ical4j-cl</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
