--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,20 @@
   <version>4.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>bw-util</name>
+  <description>This project provides a number of utility classes and methods</description>
+  <url>https://github.com/Bedework/bw-util</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- Maven Plugin Versions -->
     <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
     <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
+
     <!-- Bedework Versions -->
-		<bedework.releases.repo.url>scp://dev.bedework.org/data/repository/maven/maven2</bedework.releases.repo.url>
-		<bedework.snapshots.repo.url>scp://dev.bedework.org/data/repository/maven/maven2</bedework.snapshots.repo.url>
-    <bw-ws.version>4.0.1-SNAPSHOT</bw-ws.version>
+    <bw-ws.version>4.0.3</bw-ws.version>
+    <ical4j.version>1.1.1</ical4j.version>
+    <ical4j-vcard.version>1.0.1</ical4j-vcard.version>
+
     <!-- Third Party Library Versions -->
     <commons-codec.version>1.5</commons-codec.version>
     <jackson.version>2.3.1</jackson.version>
@@ -26,8 +30,6 @@
     <jtidy.version>4aug2000r7-dev</jtidy.version>
     <struts.version>1.3.10</struts.version>
     <junit.version>4.8.2</junit.version>
-    <ical4j.version>1.1-BW-SNAPSHOT</ical4j.version>
-    <ical4j-vcard.version>0.9.6a-BW-SNAPSHOT</ical4j-vcard.version>
     <log4j.version>1.2.15</log4j.version>
   </properties>
 
@@ -80,6 +82,34 @@
     <module>bw-util-xml</module>
   </modules>
 
+  <developers>
+    <developer>
+      <name>Mike Douglass</name>
+      <organization>
+        Spherical Cow Group
+      </organization>
+      <organizationUrl>http://sphericalcowgroup.com/</organizationUrl>
+    </developer>
+    <developer>
+      <name>Arlen Johnson</name>
+      <organization>
+        Spherical Cow Group
+      </organization>
+      <organizationUrl>http://sphericalcowgroup.com/</organizationUrl>
+    </developer>
+  </developers>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
   <dependencyManagement>
     <dependencies>
       <!-- Bedework: Web Services -->
@@ -125,13 +155,13 @@
         <version>${h2.version}</version>
       </dependency>
       <dependency>
-        <groupId>net.fortuna.ical4j</groupId>
-        <artifactId>ical4j</artifactId>
+        <groupId>org.bedework</groupId>
+        <artifactId>bw-ical4j-cl</artifactId>
         <version>${ical4j.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.mnode.ical4j</groupId>
-        <artifactId>ical4j-vcard</artifactId>
+        <groupId>org.bedework</groupId>
+        <artifactId>bw-ical4j-vcard</artifactId>
         <version>${ical4j-vcard.version}</version>
       </dependency>
       <dependency>
@@ -200,34 +230,6 @@
     </dependencies>
   </dependencyManagement>
 
-  <repositories>
-    <repository>
-      <id>bedework.repository</id>
-      <name>Bedework Maven Repository</name>
-      <url>http://repository.bedework.org/maven2/</url>
-      <layout>default</layout>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <distributionManagement>
-    <repository>
-      <id>bedework-releases-repository</id>
-      <name>Bedework Releases Repository</name>
-      <url>${bedework.releases.repo.url}</url>
-    </repository>
-    <snapshotRepository>
-      <id>bedework-snapshots-repository</id>
-      <name>Bedework Snapshots Repository</name>
-      <url>${bedework.snapshots.repo.url}</url>
-    </snapshotRepository>
-  </distributionManagement>
-
   <build>
     <extensions>
       <extension>
@@ -265,7 +267,70 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <configuration>
+          <additionalparam>-Xdoclint:none</additionalparam>
+          <failOnError>false</failOnError>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>2.2.1</version>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.9.1</version>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <additionalparam>-Xdoclint:none</additionalparam>
+              <failOnError>false</failOnError>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.5</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
