--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,19 @@
     <ical4j-vcard.version>1.0.1</ical4j-vcard.version>
 
     <!-- Third Party Library Versions -->
-    <commons-codec.version>1.5</commons-codec.version>
-    <jackson.version>2.3.1</jackson.version>
     <apache-http.version>4.2.2</apache-http.version>
-    <hibernate.version>3.6.9.Final</hibernate.version>
+    <commons-codec.version>1.5</commons-codec.version>
     <derby.version>10.8.2.2</derby.version>
     <h2.version>1.2.130</h2.version>
-    <servlet-api.version>2.5</servlet-api.version>
+    <hibernate.version>3.6.9.Final</hibernate.version>
+    <jackson.version>2.3.1</jackson.version>
+    <jms.version>1.1</jms.version>
+    <jolokia.version>1.3.1</jolokia.version>
     <jtidy.version>4aug2000r7-dev</jtidy.version>
-    <struts.version>1.3.10</struts.version>
     <junit.version>4.8.2</junit.version>
     <log4j.version>1.2.15</log4j.version>
+    <servlet-api.version>2.5</servlet-api.version>
+    <struts.version>1.3.10</struts.version>
   </properties>
 
   <organization>
@@ -82,6 +84,8 @@
     <module>bw-util-vcard</module>
     <module>bw-util-wildfly</module>
     <module>bw-util-xml</module>
+    <module>bw-util-jms</module>
+    <module>bw-util-jolokia</module>
   </modules>
 
   <developers>
@@ -187,6 +191,13 @@
         <artifactId>httpcore</artifactId>
         <version>${apache-http.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.jolokia</groupId>
+        <artifactId>jolokia-client-java</artifactId>
+        <version>${jolokia.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>jtidy</groupId>
         <artifactId>jtidy</artifactId>
@@ -198,11 +209,19 @@
         <version>${servlet-api.version}</version>
         <scope>provided</scope>
       </dependency>
+
+      <dependency>
+        <groupId>javax.jms</groupId>
+        <artifactId>jms</artifactId>
+        <version>${jms.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts-core</artifactId>
         <version>${struts.version}</version>
       </dependency>
+
       <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
