--- a/bw-util-jms/pom.xml
+++ b/bw-util-jms/pom.xml
@@ -30,7 +30,7 @@
 
     <dependency>
       <groupId>javax.jms</groupId>
-      <artifactId>jms</artifactId>
+      <artifactId>javax.jms-api</artifactId>
     </dependency>
   </dependencies>
 </project>
