--- a/bw-util-http/pom.xml
+++ b/bw-util-http/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>org.bedework</groupId>
         <artifactId>bw-util</artifactId>
-        <version>4.0.3-SNAPSHOT</version>
+        <version>4.0.3</version>
     </parent>
 
     <artifactId>bw-util-http</artifactId>
-    <version>4.0.3-SNAPSHOT</version>
+    <version>4.0.3</version>
 
   <packaging>jar</packaging>
 
