--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
     <jtidy.version>4aug2000r7-dev</jtidy.version>
     <junit.version>4.8.2</junit.version>
     <log4j.version>1.2.15</log4j.version>
+    <maven-plugin-annotations.version>3.4</maven-plugin-annotations.version>
+    <maven-plugin-api.version>3.0</maven-plugin-api.version>
     <servlet-api.version>2.5</servlet-api.version>
     <struts.version>1.3.10</struts.version>
   </properties>
@@ -203,6 +205,19 @@
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
         <version>${apache-http.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-plugin-api</artifactId>
+        <version>${maven-plugin-api.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.maven.plugin-tools</groupId>
+        <artifactId>maven-plugin-annotations</artifactId>
+        <version>${maven-plugin-annotations.version}</version>
+        <scope>provided</scope>
       </dependency>
 
       <dependency>
