Further changes to post-build deployer. Factor out runnable class and some fixes. Now usable as a maven plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
     <module>bw-util-timezones</module>
     <module>bw-util-vcard</module>
     <module>bw-util-xml</module>
+    <module>bw-util-maven-deploy</module>
   </modules>
 
   <developers>
