--- a/bw-util-timezones/pom.xml
+++ b/bw-util-timezones/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.4-SNAPSHOT</version>
+    <version>4.0.4</version>
   </parent>
 
   <artifactId>bw-util-timezones</artifactId>
-  <version>4.0.4-SNAPSHOT</version>
+  <version>4.0.4</version>
 
   <packaging>jar</packaging>
 
