--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <!-- Bedework Versions -->
     <bw-ws.version>4.0.3</bw-ws.version>
-    <ical4j.version>1.1.4-SNAPSHOT</ical4j.version>
+    <ical4j.version>1.1.3</ical4j.version>
     <ical4j-vcard.version>1.0.1</ical4j-vcard.version>
 
     <!-- Third Party Library Versions -->
