--- a/bw-util-options/pom.xml
+++ b/bw-util-options/pom.xml
@@ -5,12 +5,10 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.7</version>
+    <version>4.0.7-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.bedework</groupId>
   <artifactId>bw-util-options</artifactId>
-  <version>4.0.7</version>
 
   <packaging>jar</packaging>
 
