--- a/bw-util-config-http/pom.xml
+++ b/bw-util-config-http/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.bedework</groupId>
         <artifactId>bw-util</artifactId>
-        <version>4.0.9-SNAPSHOT</version>
+        <version>4.0.9</version>
     </parent>
 
     <artifactId>bw-util-config-http</artifactId>
