--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.bedework</groupId>
   <artifactId>bw-util</artifactId>
-  <version>4.0.9</version>
+  <version>4.0.10-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>bw-util</name>
   <description>This project provides a number of utility classes and methods</description>
