--- a/bw-util-servlet/pom.xml
+++ b/bw-util-servlet/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.10-SNAPSHOT</version>
+    <version>4.0.10</version>
   </parent>
 
   <artifactId>bw-util-servlet</artifactId>
