--- a/bw-util-servlet-filters/pom.xml
+++ b/bw-util-servlet-filters/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.bedework</groupId>
         <artifactId>bw-util</artifactId>
-        <version>4.0.11</version>
+        <version>4.0.12-SNAPSHOT</version>
     </parent>
 
     <artifactId>bw-util-servlet-filters</artifactId>
