--- a/bw-util-timezones/pom.xml
+++ b/bw-util-timezones/pom.xml
@@ -31,8 +31,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.bedework</groupId>
-      <artifactId>bw-ical4j-cl</artifactId>
+      <groupId>${ical4j.groupId}</groupId>
+      <artifactId>${ical4j.artifactId}</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
