Refactor the client classes - add a new cli package.
Handle new json adminGroups request

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
     <module>bw-util-xml</module>
     <module>bw-util-maven-deploy</module>
     <module>bw-util-elasticsearch</module>
+    <module>bw-util-cli</module>
   </modules>
 
   <developers>
