--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
 
     <!-- Bedework Versions -->
-    <bw-ws.version>4.0.4-SNAPSHOT</bw-ws.version>
+    <bw-ws.version>4.0.4</bw-ws.version>
     <ical4j.groupId>org.bedework.ical4j</ical4j.groupId>
     <ical4j.artifactId>ical4j</ical4j.artifactId>
     <ical4j.version>2.0.3</ical4j.version>
