--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-plugin-registry</artifactId>
+        <version>${maven-plugin-api.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
         <version>${maven-plugin-annotations.version}</version>
@@ -360,6 +366,22 @@
         <artifactId>versions-maven-plugin</artifactId>
         <version>2.3</version>
         <configuration>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <version>3.5</version>
+        <executions>
+          <execution>
+            <id>default-descriptor</id>
+            <phase>process-classes</phase>
+          </execution>
+        </executions>
+        <configuration>
+          <goalPrefix>bw-util-deployment</goalPrefix>
+          <!--
+          <outputDirectory>target/dir</outputDirectory>-->
         </configuration>
       </plugin>
     </plugins>
