--- a/bw-util-cli/pom.xml
+++ b/bw-util-cli/pom.xml
@@ -19,6 +19,11 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-misc</artifactId>
+      <version>4.0.15-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
 </project>
