--- a/bw-util-cli/pom.xml
+++ b/bw-util-cli/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>bw-util</artifactId>
     <groupId>org.bedework</groupId>
-    <version>4.0.15</version>
+    <version>4.0.16-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>org.bedework</groupId>
       <artifactId>bw-util-misc</artifactId>
-      <version>4.0.15</version>
+      <version>4.0.16-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
