--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,9 @@
     <ical4j-vcard.version>1.0.4</ical4j-vcard.version>
 
     <!-- Third Party Library Versions -->
-    <apache-http.version>4.2.2</apache-http.version>
-    <apache-http-osgi.version>4.3.3</apache-http-osgi.version>
+    <http-client.version>4.5.3</http-client.version>
+    <http-core.version>4.4.8</http-core.version>
+    <http-osgi.version>4.5.3</http-osgi.version>
     <commons-codec.version>1.5</commons-codec.version>
     <commons-lang.version>2.3</commons-lang.version>
     <derby.version>10.8.2.2</derby.version>
@@ -211,17 +212,17 @@
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
-        <version>${apache-http.version}</version>
+        <version>${http-client.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient-osgi</artifactId>
-        <version>${apache-http-osgi.version}</version>
+        <version>${http-osgi.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
-        <version>${apache-http.version}</version>
+        <version>${http-core.version}</version>
       </dependency>
 
       <dependency>
