--- a/bw-util-xml/pom.xml
+++ b/bw-util-xml/pom.xml
@@ -15,13 +15,13 @@
   <dependencies>
     <dependency>
       <groupId>org.bedework</groupId>
-      <artifactId>bw-ws-tzsvr</artifactId>
-      <version>${bw-ws.version}</version>
+      <artifactId>bw-xml-tzsvr</artifactId>
+      <version>${bw-xml.version}</version>
     </dependency>
     <dependency>
       <groupId>org.bedework</groupId>
-      <artifactId>bw-ws-calws-soap</artifactId>
-      <version>${bw-ws.version}</version>
+      <artifactId>bw-xml-calws-soap</artifactId>
+      <version>${bw-xml.version}</version>
     </dependency>
     <dependency>
       <groupId>org.bedework</groupId>
