--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
 
     <!-- Bedework Versions -->
-    <bw-ws.version>4.0.5-SNAPSHOT</bw-ws.version>
+    <bw-xml.version>4.0.5-SNAPSHOT</bw-xml.version>
     <ical4j.groupId>org.bedework.ical4j</ical4j.groupId>
     <ical4j.artifactId>ical4j</ical4j.artifactId>
     <ical4j.version>2.0.3</ical4j.version>
@@ -136,18 +136,18 @@
       <!-- Bedework: Web Services -->
       <dependency>
         <groupId>org.bedework</groupId>
-        <artifactId>bw-ws-tzsvr</artifactId>
-        <version>${bw-ws.version}</version>
+        <artifactId>bw-xml-tzsvr</artifactId>
+        <version>${bw-xml.version}</version>
       </dependency>
       <dependency>
         <groupId>org.bedework</groupId>
-        <artifactId>bw-ws-calws-soap</artifactId>
-        <version>${bw-ws.version}</version>
+        <artifactId>bw-xml-calws-soap</artifactId>
+        <version>${bw-xml.version}</version>
       </dependency>
       <dependency>
         <groupId>org.bedework</groupId>
-        <artifactId>bw-ws-icalendar</artifactId>
-        <version>${bw-ws.version}</version>
+        <artifactId>bw-xml-icalendar</artifactId>
+        <version>${bw-xml.version}</version>
       </dependency>
       <dependency>
         <groupId>${ical4j.groupId}</groupId>
