--- a/bw-util-maven-deploy/pom.xml
+++ b/bw-util-maven-deploy/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <packaging>maven-plugin</packaging>
 
-  <artifactId>bw-deploy-maven-plugin</artifactId>
+  <artifactId>bw-util-maven-deploy</artifactId>
 
   <dependencies>
     <dependency>
