Many changes to get calendar building again.
Fixesstill needed to get deployer functional

--- a/bw-util-jmx/pom.xml
+++ b/bw-util-jmx/pom.xml
@@ -19,10 +19,23 @@
       <artifactId>bw-util-config</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.bedework</groupId>
       <artifactId>bw-util-misc</artifactId>
       <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 </project>
