--- a/bw-util-options/pom.xml
+++ b/bw-util-options/pom.xml
@@ -19,5 +19,17 @@
       <artifactId>bw-util-xml</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 </project>
