Further changes to get calendar building again.
Deployer is now functional and a runnable script is built as part of the util build.

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
     <module>bw-util-timezones</module>
     <module>bw-util-vcard</module>
     <module>bw-util-xml</module>
+    <module>bw-util-bw-deploy</module>
   </modules>
 
   <developers>
