--- a/bw-util-maven-deploy/pom.xml
+++ b/bw-util-maven-deploy/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>bw-util</artifactId>
     <groupId>org.bedework</groupId>
-    <version>4.0.19-SNAPSHOT</version>
+    <version>4.0.19</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <packaging>maven-plugin</packaging>
